--- a/src/template.html
+++ b/src/template.html
@@ -52,14 +52,13 @@
                                 </svg>
                                 <div class="project-name">Project1</div>
                             </div>
-                            <div class="dot-menu">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                                    <g fill="#303336">
-                                        <circle cx="10" cy="15" r="2" />
-                                        <circle cx="10" cy="10" r="2" />
-                                        <circle cx="10" cy="5" r="2" />
-                                    </g>
-                                </svg>
+                            <div class="project-tools">
+                                <div class="flex">
+                                    <svg class="rename" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><mask id="ipSEditTwo0"><g fill="none" stroke="#fff" stroke-linejoin="round" stroke-width="4"><path stroke-linecap="round" d="M42 26v14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h14"/><path fill="#fff" d="M14 26.72V34h7.317L42 13.308L34.695 6L14 26.72Z"/></g></mask><path fill="#303336" d="M0 0h48v48H0z" mask="url(#ipSEditTwo0)"/></svg>
+                                </div>
+                                <div class="flex">
+                                    <svg class="delete" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><mask id="ipSDeleteFive0"><g fill="none" stroke-linejoin="round" stroke-width="4"><path stroke="#fff" stroke-linecap="round" d="M8 11h32M18 5h12"/><path fill="#fff" stroke="#fff" d="M12 17h24v23a3 3 0 0 1-3 3H15a3 3 0 0 1-3-3V17Z"/><path stroke="#000" stroke-linecap="round" d="m20 25l8 8m0-8l-8 8"/></g></mask><path fill="#303336" d="M0 0h48v48H0z" mask="url(#ipSDeleteFive0)"/></svg>
+                                </div>
                             </div>
                         </li>
                         <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
