--- a/src/template.html
+++ b/src/template.html
@@ -50,7 +50,7 @@
                                     <path fill="#10a885"
                                         d="M16 420a28 28 0 0 0 28 28h424a28 28 0 0 0 28-28V208H16Zm480-296a28 28 0 0 0-28-28H212.84l-48-32H44a28 28 0 0 0-28 28v84h480Z" />
                                 </svg>
-                                <div class="project-name">My Work</div>
+                                <input type="text" class="project-name-input" value="My Work" disabled>
                             </div>
                             <div class="project-tools">
                                 <div class="flex">
@@ -93,7 +93,7 @@
 
         <!-- #region main-->
         <div id="mainSection" class="main">
-
+            
         </div>
         <!-- #endregion-->
 
