--- a/src/template.html
+++ b/src/template.html
@@ -21,22 +21,22 @@
                 <div class="sidebar-top">
                     <div class="sidebar-header">Home</div>
                     <ul class="sidebar-list">
-                        <li class="sidebar-item sidebar-item-active"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                        <li id="tabAllTasks" class="sidebar-item tab sidebar-item-active"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                                 height="24" viewBox="0 0 24 24">
                                 <path fill="#10a885"
                                     d="M9 5v4h12V5M9 19h12v-4H9m0-1h12v-4H9M4 9h4V5H4m0 14h4v-4H4m0-1h4v-4H4v4Z" />
                             </svg>All Tasks</li>
-                        <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        <li id="tabToday" class="sidebar-item tab"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24">
                                 <path fill="#ff5436"
                                     d="M19 4h-2V2h-2v2H9V2H7v2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm-1 15h-6v-6h6v6zm1-10H5V7h14v2z" />
                             </svg>Today</li>
-                        <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        <li id="tabThisWeek" class="sidebar-item tab"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24">
                                 <path fill="#126fb5"
                                     d="M5 22h14c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2h-2V2h-2v2H9V2H7v2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2zm11-6H8v-2h8v2zM5 7h14v2H5V7z" />
                             </svg>This Week</li>
-                        <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        <li id="tabImportant" class="sidebar-item tab"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24">
                                 <path fill="#ffc300"
                                     d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21z" />
@@ -44,13 +44,13 @@
                     </ul>
                     <div class="sidebar-header">Projects</div>
                     <ul class="sidebar-list">
-                        <li class="sidebar-project">
+                        <li class="sidebar-project tab">
                             <div class="flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 512 512">
                                     <path fill="#10a885"
                                         d="M16 420a28 28 0 0 0 28 28h424a28 28 0 0 0 28-28V208H16Zm480-296a28 28 0 0 0-28-28H212.84l-48-32H44a28 28 0 0 0-28 28v84h480Z" />
                                 </svg>
-                                <input type="text" class="project-name-input" value="My Work" disabled>
+                                <input type="text" class="project-name-input" value="ToDo" disabled>
                             </div>
                             <div class="project-tools">
                                 <div class="flex">
@@ -93,7 +93,12 @@
 
         <!-- #region main-->
         <div id="mainSection" class="main">
-            
+            <div class="tasks-container">
+                <div id="mainHeading" class="home-heading"></div>
+                <div class="tasks">
+                    
+                </div>
+            </div>
         </div>
         <!-- #endregion-->
 
@@ -103,7 +108,7 @@
         </div>
         <!-- #endregion-->
     </div>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </body>
 
 </html>
