--- a/src/template.html
+++ b/src/template.html
@@ -43,29 +43,15 @@
                             </svg>Important</li>
                     </ul>
                     <div class="sidebar-header">Projects</div>
-                    <ul class="sidebar-list">
-                        <li class="sidebar-project tab">
-                            <div class="flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 512 512">
-                                    <path fill="#10a885"
-                                        d="M16 420a28 28 0 0 0 28 28h424a28 28 0 0 0 28-28V208H16Zm480-296a28 28 0 0 0-28-28H212.84l-48-32H44a28 28 0 0 0-28 28v84h480Z" />
-                                </svg>
-                                <input type="text" class="project-name-input" value="ToDo" disabled>
-                            </div>
-                            <div class="project-tools">
-                                <div class="flex">
-                                    <svg class="rename" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><mask id="ipSEditTwo0"><g fill="none" stroke="#fff" stroke-linejoin="round" stroke-width="4"><path stroke-linecap="round" d="M42 26v14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h14"/><path fill="#fff" d="M14 26.72V34h7.317L42 13.308L34.695 6L14 26.72Z"/></g></mask><path fill="#303336" d="M0 0h48v48H0z" mask="url(#ipSEditTwo0)"/></svg>
-                                </div>
-                                <div class="flex">
-                                    <svg class="delete" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><mask id="ipSDeleteFive0"><g fill="none" stroke-linejoin="round" stroke-width="4"><path stroke="#fff" stroke-linecap="round" d="M8 11h32M18 5h12"/><path fill="#fff" stroke="#fff" d="M12 17h24v23a3 3 0 0 1-3 3H15a3 3 0 0 1-3-3V17Z"/><path stroke="#000" stroke-linecap="round" d="m20 25l8 8m0-8l-8 8"/></g></mask><path fill="#303336" d="M0 0h48v48H0z" mask="url(#ipSDeleteFive0)"/></svg>
-                                </div>
-                            </div>
-                        </li>
+                    <ul id="projectsContainer" class="projects-sidebar-list">
+
+                    </ul>
+                    <ul class="projects-sidebar-list">
                         <li class="sidebar-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24">
-                                <path fill="#303336"
-                                    d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10s10-4.477 10-10S17.523 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z" />
-                            </svg>Add Project</li>
+                            viewBox="0 0 24 24">
+                            <path fill="#303336"
+                                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10s10-4.477 10-10S17.523 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z" />
+                        </svg>Add Project</li>
                     </ul>
                 </div>
                 <div class="sidebar-bottom">
