Added adding projects functionality

--- a/src/template.html
+++ b/src/template.html
@@ -101,13 +101,11 @@
                 <div class="modal-title">Add Project</div>
             </div>
             <div class="modal-body">
-                <form action="">
-                    <input type="text" class="add-project-input" name="project-name" placeholder="Enter project title">
+                    <input type="text" id="projectNameInput" class="add-project-input" name="project-name" placeholder="Enter project title">
                     <div class="project-modal-buttons">
-                        <button type="submit" class="add-project-buttons add-btn">Add</button>
-                        <button type="button" data-close-button class="add-project-buttons close-btn">Cancel</button>
+                        <button type="button" id="addProjectButton" class="add-project-buttons add-btn">Add</button>
+                        <button type="button" id="closeModalButton" data-close-button class="add-project-buttons close-btn">Cancel</button>
                     </div>
-                </form>
             </div>
         </div>
         <div id="overlay"></div>
