--- a/src/template.html
+++ b/src/template.html
@@ -101,11 +101,13 @@
                 <div class="modal-title">Add Project</div>
             </div>
             <div class="modal-body">
-                    <input type="text" id="projectNameInput" class="add-project-input" name="project-name" placeholder="Enter project title">
+                <form id="myForm" action="">
+                    <input type="text" id="projectNameInput" class="add-project-input" name="project-name" placeholder="Enter project title" required>
                     <div class="project-modal-buttons">
-                        <button type="button" id="addProjectButton" class="add-project-buttons add-btn">Add</button>
+                        <button type="submit" id="addProjectButton" class="add-project-buttons add-btn">Add</button>
                         <button type="button" id="closeModalButton" data-close-button class="add-project-buttons close-btn">Cancel</button>
                     </div>
+                </form>
             </div>
         </div>
         <div id="overlay"></div>
