Added invalid project adding alert message

--- a/src/template.html
+++ b/src/template.html
@@ -99,6 +99,7 @@
         <div id="modal" class="modal">
             <div class="modal-header">
                 <div class="modal-title">Add Project</div>
+                <div id="modalAlert" class="modal-alert"></div>
             </div>
             <div class="modal-body">
                 <form id="myForm" action="">
