Added project modal resseting after closing

--- a/src/template.html
+++ b/src/template.html
@@ -103,7 +103,7 @@
             </div>
             <div class="modal-body">
                 <form id="myForm" action="">
-                    <input type="text" id="projectNameInput" class="add-project-input" name="project-name" placeholder="Enter project title" required>
+                    <input type="text" id="projectNameInput" class="add-project-input" name="project-name" placeholder="Enter project title" autocomplete="off" required>
                     <div class="project-modal-buttons">
                         <button type="submit" id="addProjectButton" class="add-project-buttons add-btn">Add</button>
                         <button type="button" id="closeModalButton" data-close-button class="add-project-buttons close-btn">Cancel</button>
