--- a/src/template.html
+++ b/src/template.html
@@ -91,7 +91,7 @@
 
         <!-- #region footer-->
         <div id="footerSection" class="footer">
-        
+
         </div>
         <!-- #endregion-->
 
@@ -124,7 +124,7 @@
                 <form id="renameForm" action="">
                     <input type="text" id="projectRenameInput" class="add-project-input" name="project-name" placeholder="Enter new project title" autocomplete="off" required>
                     <div class="project-modal-buttons">
-                        <button type="submit" id="renameProjectButton" class="add-project-buttons add-btn">Rename</button>
+                        <button type="submit" id="projectRenameButton" class="add-project-buttons add-btn">Rename</button>
                         <button type="button" id="closeModalButtonRename" data-close-button class="add-project-buttons close-btn">Cancel</button>
                     </div>
                 </form>
