Added delete project confirmation

--- a/src/template.html
+++ b/src/template.html
@@ -131,6 +131,24 @@
             </div>
         </div>
         <!-- #endregion-->
+
+        <!-- #region modal-rename-->
+        <div id="modalDelete" class="modal">
+            <div class="modal-header-rename">
+                <div class="modal-title">Delete</div>
+                <div id="deleteProjectName"></div>
+            </div>
+            <div class="modal-body">
+                <form id="deleteForm" action="">
+                    <div id="deleteQuestion">Are you sure you want to delete this project?</div>
+                    <div class="project-modal-buttons">
+                        <button type="submit" id="projectDeleteButton" class="add-project-buttons close-btn">Delete</button>
+                        <button type="button" id="closeModalButtonDelete" data-close-button class="add-project-buttons add-btn">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- #endregion-->
     </div>
     <script src="main.js" defer></script>
 </body>
