Improved sidebar active tabs functionality

--- a/src/template.html
+++ b/src/template.html
@@ -119,6 +119,7 @@
             <div class="modal-header-rename">
                 <div class="modal-title">Rename</div>
                 <div id="oldName"></div>
+                <div id="modalAlertRename" class="modal-alert"></div>
             </div>
             <div class="modal-body">
                 <form id="renameForm" action="">
