Added max length for project names

--- a/src/template.html
+++ b/src/template.html
@@ -117,7 +117,7 @@
             </div>
             <div class="modal-body">
                 <form id="addForm" action="">
-                    <input type="text" id="projectNameInput" class="add-project-input" placeholder="Enter project title" autocomplete="off">
+                    <input type="text" id="projectNameInput" class="add-project-input" placeholder="Enter project title" autocomplete="off" maxlength="11">
                     <div class="project-modal-buttons">
                         <button type="submit" id="addProjectButton" class="add-project-buttons add-btn">Add</button>
                         <button type="button" id="closeModalButton" data-close-button
@@ -141,7 +141,7 @@
             <div class="modal-body">
                 <form id="renameForm" action="">
                     <input type="text" id="projectRenameInput" class="add-project-input"
-                        placeholder="Enter new project title" autocomplete="off">
+                        placeholder="Enter new project title" autocomplete="off" maxlength="11">
                     <div class="project-modal-buttons">
                         <button type="submit" id="projectRenameButton"
                             class="add-project-buttons add-btn">Rename</button>
