--- a/src/template.html
+++ b/src/template.html
@@ -105,7 +105,7 @@
 
         <!-- #region footer-->
         <div id="footerSection" class="footer">
-           
+           <div id="mediaQueryHandler"></div>
         </div>
         <!-- #endregion-->
 
@@ -124,8 +124,6 @@
                             class="add-project-buttons close-btn">Cancel</button>
                     </div>
                 </form>
-
-                <form action="" id="test" method="post"></form>
             </div>
         </div>
         <div id="overlay"></div>
