--- a/src/template.html
+++ b/src/template.html
@@ -93,10 +93,15 @@
         <div id="mainSection" class="main">
             <div class="tasks-container">
                 <div id="mainHeading" class="home-heading">
-                    <div id="currentTabIcon" class="flex"></div>
-                    <div id="currentTabName"></div>
+                    <div class="main-heading-left flex">
+                        <div id="currentTabIcon" class="flex"></div>
+                        <div id="currentTabName"></div>
+                    </div>
+                    <div id="mainHeadingRight" class="main-heading-right">
+                     
+                    </div>
                 </div>
-                <div class="tasks">
+                <div id="tasksListView" class="tasks-list-view">
 
                 </div>
             </div>
