--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,12 @@
 
 <body>
     <div class="body-container">
+        <!-- #region header-->
+        <div id="headerSection" class="header">
+          
+        </div>
+        <!-- #endregion-->   
+
         <!-- #region sidebar-->
         <input type="checkbox" name="" id="Open">
         <label for="Open" class="sidebar-icon">
