--- a/src/template.html
+++ b/src/template.html
@@ -94,7 +94,7 @@
         <!-- #region main-->
         <div id="mainSection" class="main">
             <div class="tasks-container">
-                <div id="mainHeading" class="home-heading">
+                <div id="mainHeading" class="home-heading border-bottom">
                     <div class="main-heading-left flex">
                         <div id="currentTabIcon" class="flex"></div>
                         <div id="currentTabName"></div>
