--- a/src/template.html
+++ b/src/template.html
@@ -103,6 +103,9 @@
                      
                     </div>
                 </div>
+                <div class="date-displayer">
+                    
+                </div>
                 <div id="tasksListView" class="tasks-list-view">
 
                 </div>
