Added completing tasks functionality

--- a/src/template.html
+++ b/src/template.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="sidebar-bottom">
                     <div class="sidebar-header">Settings</div>
-                    <ul class="sidebar-list">
+                    <ul class="sidebar-list-settings">
                         <li class="settings-item">
                             <div class="flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 20 20">
@@ -216,6 +216,10 @@
             </form>
         </div>
     </div>
+    <!-- #endregion-->
+
+    <!-- #region toast-notification-->
+
     <!-- #endregion-->
 
     <div id="overlay"></div>
