Added website preloader

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <div id="preloader"></div>
+
     <div class="body-container">
         <!-- #region header-->
         <div id="headerSection" class="header">
