--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo | ProductivityApp</title>
+    <style>
+        #preloader {
+            height: 100vh;
+            width: 100vw;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 30000;
+        }
+    </style>
 </head>
 
 <body>
