--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo | ProductivityApp</title>
+    <title>Listify | ProductivityApp</title>
     <style>
         .preloader {
             background: #fff;
@@ -15,8 +15,10 @@
             left: 0;
             z-index: 30000;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            color: #303336;
         }
     </style>
 </head>
@@ -24,6 +26,8 @@
 <body>
     <div id="preloader" class="preloader">
         <div class="preloader-image"></div>
+        <div class="preloader-text">Listify</div>
+        <div class="preloader-tagline">Listify Your Chaos, Find Your Calm.</div>
     </div>
 
     <div class="body-container">
