--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,8 @@
             justify-content: center;
             align-items: center;
             color: #303336;
+            visibility: visible;
+            transition: opacity 0.5s, visibility 0.5s, transform 0.5s;
         }
     </style>
 </head>
