--- a/src/template.html
+++ b/src/template.html
@@ -49,13 +49,9 @@
         <div id="sidebarMenu" class="sidebar">
             <div class="sidebar-items">
                 <div class="sidebar-top">
-                    <div class="sidebar-header">Home</div>
+                    <div class="sidebar-header">Tabs</div>
                     <ul class="sidebar-list">
-                        <li id="tabAllTasks" class="sidebar-item tab sidebar-item-active"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                <path fill="#10a885"
-                                    d="M9 5v4h12V5M9 19h12v-4H9m0-1h12v-4H9M4 9h4V5H4m0 14h4v-4H4m0-1h4v-4H4v4Z" />
-                            </svg>All Tasks</li>
+                        <li id="tabAllTasks" class="sidebar-item tab sidebar-item-active"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none"><path d="M24 0v24H0V0h24ZM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035c-.01-.004-.019-.001-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427c-.002-.01-.009-.017-.017-.018Zm.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093c.012.004.023 0 .029-.008l.004-.014l-.034-.614c-.003-.012-.01-.02-.02-.022Zm-.715.002a.023.023 0 0 0-.027.006l-.006.014l-.034.614c0 .012.007.02.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01l-.184-.092Z"/><path fill="#10a885" d="M13.228 2.688a2 2 0 0 0-2.456 0l-8.384 6.52C1.636 9.795 2.05 11 3.003 11H4v8a2 2 0 0 0 2 2h4v-6a2 2 0 1 1 4 0v6h4a2 2 0 0 0 2-2v-8h.997c.952 0 1.368-1.205.615-1.791l-8.384-6.52Z"/></g></svg>Home</li>
                         <li id="tabToday" class="sidebar-item tab"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                                 height="24" viewBox="0 0 24 24">
                                 <path fill="#ff5436"
@@ -129,10 +125,10 @@
                 </div>
                 <div class="tasks-list-container">
                     <div class="date-displayer">
-                    
+
                     </div>
                     <div id="tasksListView" class="tasks-list-view">
-    
+
                     </div>
                 </div>
             </div>
