Changed default theme to dark

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <title>Listify | ProductivityApp</title>
     <style>
         .preloader-for-preloader{
-            background: #fff;
+            background: #1a1a1a;
             height: 100vh;
             width: 100vw;
             position: fixed;
@@ -18,7 +18,7 @@
             transition: opacity 0.5s, visibility 0.5s, transform 0.5s;
         }
         .preloader {
-            background: #fff;
+            background: #1a1a1a;
             height: 100vh;
             width: 100vw;
             position: fixed;
@@ -29,7 +29,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            color: #303336;
+            color: #fafafa;
             visibility: visible;
             transition: opacity 0.5s, visibility 0.5s, transform 0.5s;
         }
@@ -100,7 +100,7 @@
                                 </svg>Dark Theme
                             </div>
                             <div id="themeToggler">
-                                <input type="checkbox" name="" id="toggler">
+                                <input type="checkbox" name="" id="toggler" checked>
                             </div>
                         </li>
                     </ul>
