Dark theme colors update

--- a/src/template.html
+++ b/src/template.html
@@ -81,11 +81,8 @@
 
                     </ul>
                     <ul class="projects-sidebar-list">
-                        <li data-modal-target="#modal" class="sidebar-add-project"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                <path fill="#303336"
-                                    d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10s10-4.477 10-10S17.523 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z" />
-                            </svg>Add List
+                        <li data-modal-target="#modal" class="sidebar-add-project">
+                            <div class="add-task-btn"></div>Add List
                         </li>
                     </ul>
                 </div>
@@ -94,10 +91,7 @@
                     <ul class="sidebar-list-settings">
                         <li class="settings-item">
                             <div class="flex">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 20 20">
-                                    <path fill="#303336"
-                                        d="M10 3.5a6.5 6.5 0 1 1 0 13v-13ZM10 2a8 8 0 1 0 0 16a8 8 0 0 0 0-16Z" />
-                                </svg>Dark Theme
+                                <div class="dark-theme-icon"></div>Dark Theme
                             </div>
                             <div id="themeToggler">
                                 <input type="checkbox" name="" id="toggler" checked>
