Changed and added new logo

--- a/src/template.html
+++ b/src/template.html
@@ -236,6 +236,14 @@
 
     <div id="overlay"></div>
     <div id="mediaQueryHandler"></div>
+    <div class="listify-container">
+        <div class="logo-main"></div>
+        <div class="listify">Listify</div>
+    </div>
+    <div class="listify-container-small">
+        <div class="logo-main-small"></div>
+        <div class="listify-small">Listify</div>
+    </div>
     <script src="main.js" defer></script>
 </body>
 
