Added Local Storage functionality

--- a/src/template.html
+++ b/src/template.html
@@ -137,7 +137,7 @@
         </div>
         <div class="modal-body">
             <form id="addForm" action="">
-                <input type="text" id="projectNameInput" class="add-project-input" placeholder="Enter list title" autocomplete="off" maxlength="11">
+                <input type="text" id="projectNameInput" class="add-project-input" placeholder="Enter list title(ToDo, MyWork, Gym, etc...)" autocomplete="off" maxlength="11">
                 <div id="modalAlert" class="modal-alert"></div>
                 <div class="project-modal-buttons">
                     <button type="submit" id="addProjectButton" class="add-project-buttons add-btn">Add</button>
@@ -198,7 +198,7 @@
         </div>
         <div class="modal-body">
             <form id="addSectionForm" action="">
-                <input type="text" id="sectionNameInput" class="add-project-input" placeholder="Enter section tittle" autocomplete="off" maxlength="30">
+                <input type="text" id="sectionNameInput" class="add-project-input" placeholder="Enter section tittle(Routines, Shopping, etc...)" autocomplete="off" maxlength="30">
                 <div id="modalSectionAlert" class="modal-alert"></div>
                 <div class="project-modal-buttons">
                     <button type="submit" id="addSectionButtonSubmit" class="add-project-buttons add-btn">Add</button>
